apps/ping-pong/manifests/exercise_2.03/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: frankhul/ping-pong:v0.1
