apps/ping-pong/manifests/exercise_2.03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 4000
