apps/ping-pong/manifests/exercise_2.03/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-app-ingress
  namespace: development
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 2345
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
